@@ -1,4 +1,4 @@
-/* $Id$ */
+/* $Id*/
 
 h2.styleguide {
   font-family: helvetica, arial, sans-serif;
@@ -18,7 +18,7 @@ div.styleguide {
 
 #styleguide-header .item-list {
   float: left;
-  margin: 0 2em 0 0;
+  margin: 0 0 0 2em;
   width: 20%;
   font-family: helvetica, arial, sans-serif;
 }
