@@ -22,44 +22,53 @@ function styleguide_styleguide() {
       'title' => 'Unordered list',
       'theme' => 'item_list',
       'variables' => array('items' => styleguide_list(), 'type' => 'ul'),
+      'group' => 'Lists',
     ),
     'ol' => array(
       'title' => 'Ordered list',
       'theme' => 'item_list',
       'variables' => array('items' => styleguide_list(), 'type' => 'ol'),
+      'group' => 'Lists',
     ),
     'ul_title' => array(
       'title' => 'Unordered list, with title',
       'theme' => 'item_list',
       'variables' => array('items' => styleguide_list(), 'type' => 'ul', 'title' => ucwords(styleguide_word())),
+      'group' => 'Lists',
     ),
     'ol_title' => array(
       'title' => 'Ordered list, with title',
       'theme' => 'item_list',
       'variables' => array('items' => styleguide_list(), 'type' => 'ol', 'title' => ucwords(styleguide_word())),
+      'group' => 'Lists',
     ),
     'menu_tree' => array(
       'title' => 'Menu tree',
       'content' => drupal_render(menu_tree('management')),
+      'group' => 'Menus',
     ),
     'table' => array(
       'title' => 'Table',
       'theme' => 'table',
       'variables' => array('header' => styleguide_header(), 'rows' => styleguide_rows()),
+      'group' => 'Tables',
     ),
     'text' => array(
       'title' => 'Text block',
       'content' => styleguide_paragraph(3),
+      'group' => 'Text',
     ),
     'image-horizontal' => array(
       'title' => 'Image, horizontal',
       'theme' => 'image',
       'variables' => array('path' => styleguide_image('horizontal'), 'alt' => t('My image'), 'title' => t('My image')),
+      'group' => 'Media',
     ),
     'image-vertical' => array(
       'title' => 'Image, vertical',
       'theme' => 'image',
       'variables' => array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image')),
+      'group' => 'Media',
     ),
   );
   $content = '';
@@ -69,6 +78,7 @@ function styleguide_styleguide() {
   $items["headings"] = array(
     'title' => "Headings",
     'content' => $content,
+    'group' => 'Text',
   );
   $content = '';
   for ($i = 1; $i <=6; $i++) {
@@ -77,8 +87,8 @@ function styleguide_styleguide() {
   $items["headings_text"] = array(
     'title' => "Headings with text",
     'content' => $content,
+    'group' => 'Text',
   );
-
   $messages = array('status', 'warning', 'error');
   foreach ($messages as $message) {
     $items[$message . '-message'] = array(
@@ -89,6 +99,7 @@ function styleguide_styleguide() {
   $items['form'] = array(
     'title' => 'Forms',
     'content' => drupal_render(drupal_get_form('styleguide_form')),
+    'group' => 'Forms',
   );
   return $items;
 }
